<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/suite_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/mainChipView"
        android:layout_width="123dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/poker_chip" />

    <TextView
        android:id="@+id/playerCashView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/cash"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainChipView"
        app:layout_constraintStart_toEndOf="@+id/mainChipView" />

    <Button
        android:id="@+id/startRoundButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:text="@string/startRoundButton"
        android:textColor="#AED581"
        app:layout_constraintBottom_toTopOf="@+id/playerCashView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerBet"
        app:layout_constraintVertical_bias="0.26" />

    <EditText
        android:id="@+id/playerBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/betEditTextHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

</androidx.constraintlayout.widget.ConstraintLayout>