<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealerHandActivity">

    <ImageView
        android:id="@+id/dealerBackgroundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenbackground" />

    <ImageView
        android:id="@+id/cardViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewFront"
        app:layout_constraintStart_toStartOf="@+id/cardViewFront"
        app:srcCompat="@drawable/peter_river" />

    <ImageView
        android:id="@+id/cardViewFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/spades_a" />

    <ImageButton
        android:id="@+id/cardLeftButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="#35B307"
        android:contentDescription="@string/cardLeftButton"
        app:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/cardRightButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="#35B307"
        android:contentDescription="@string/cardRightButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="#000000" />

    <TextView
        android:id="@+id/pointView"
        android:layout_width="288dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:background="#A8A8A8"
        android:text="@string/points"
        android:textColor="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFront" />

    <Button
        android:id="@+id/dealerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointView"
        app:layout_constraintVertical_bias="0.19999999" />

</androidx.constraintlayout.widget.ConstraintLayout>